--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
-upstream unicorn {
-  server unix:/tmp/unicorn.test-app.sock fail_timeout=0;
+upstream unicorn-wundtlab {
+  server unix:/tmp/unicorn.wundtlab.sock fail_timeout=0;
 }
 
 server {
@@ -18,7 +18,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://unicorn;
+    proxy_pass http://unicorn-wundtlab;
   }
 
   error_page 500 502 503 504 /500.html;
