nginx config changed

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,8 +3,8 @@ upstream unicorn-wundtlab {
 }
 
 server {
-  listen 81;
-  # server_name example.com;
+  listen 80;
+  server_name test.wundtlab.com;
   root /home/inspiring/apps/wundtlab/current/public;
 
   location ^~ /assets/ {
